versions/v3.6.0/doxygen/html/tmp116_8h.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/tmp116_8h.html
original_path: doxygen/html/tmp116_8h.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

tmp116.h File Reference

`#include <[zephyr/device.h](device_8h_source.md)>`  
`#include <[sys/types.h](lib_2libc_2minimal_2include_2sys_2types_8h_source.md)>`

[Go to the source code of this file.](tmp116_8h_source.md)

| Macros | |
| --- | --- |
| #define | [EEPROM\_TMP116\_SIZE](#a8729d146265e4f402928085f46c49d33)   (4 \* [sizeof](retained__mem_8h.md#a8c945f5e523f7f88fe4d09bfe304240e)([uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e))) |

| Functions | |
| --- | --- |
| int | [tmp116\_eeprom\_read](#abfc6372f2d640f921b237fe14f18b73b) (const struct [device](structdevice.md) \*dev, [off\_t](lib_2libc_2minimal_2include_2sys_2types_8h.md#a98a5cc5f4a350bf5652565021a2f239f) offset, void \*data, [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) len) |
| int | [tmp116\_eeprom\_write](#ab740cbdd946d5df162621f2309822810) (const struct [device](structdevice.md) \*dev, [off\_t](lib_2libc_2minimal_2include_2sys_2types_8h.md#a98a5cc5f4a350bf5652565021a2f239f) offset, const void \*data, [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) len) |

## Macro Definition Documentation

## [◆ ](#a8729d146265e4f402928085f46c49d33)EEPROM\_TMP116\_SIZE

| #define EEPROM\_TMP116\_SIZE   (4 \* [sizeof](retained__mem_8h.md#a8c945f5e523f7f88fe4d09bfe304240e)([uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e))) |
| --- |

## Function Documentation

## [◆ ](#abfc6372f2d640f921b237fe14f18b73b)tmp116\_eeprom\_read()

| int tmp116\_eeprom\_read | ( | const struct [device](structdevice.md) \* | *dev*, |
| --- | --- | --- | --- |
|  |  | [off\_t](lib_2libc_2minimal_2include_2sys_2types_8h.md#a98a5cc5f4a350bf5652565021a2f239f) | *offset*, |
|  |  | void \* | *data*, |
|  |  | [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) | *len* ) |

## [◆ ](#ab740cbdd946d5df162621f2309822810)tmp116\_eeprom\_write()

| int tmp116\_eeprom\_write | ( | const struct [device](structdevice.md) \* | *dev*, |
| --- | --- | --- | --- |
|  |  | [off\_t](lib_2libc_2minimal_2include_2sys_2types_8h.md#a98a5cc5f4a350bf5652565021a2f239f) | *offset*, |
|  |  | const void \* | *data*, |
|  |  | [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) | *len* ) |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [drivers](dir_49c63ef737d38af1498bd111c90a6556.md)
- [sensor](dir_b6423b3a8fc1c9278ff19cba182cfe6d.md)
- [tmp116.h](tmp116_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
